configure ef core and add first Entity (Category)

--- a/Training/appsettings.json
+++ b/Training/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CmsConnectionString": "Server=KRATOS\\HAITHAM;Database=CmsAppDb;User Id=sa;Password=haitham;"
+  }
 }
