add Api Clients Middleware

--- a/Training/appsettings.json
+++ b/Training/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CmsConnectionString": "Server=KRATOS\\HAITHAM;Database=CmsAppDb;User Id=sa;Password=haitham;"
-  }
+  },
+  "AppClients": [
+    {
+      "Name": "C1",
+      "ApiKey": "1000012300102308987912823"
+    },
+    {
+      "Name": "C2",
+      "ApiKey": "1823767823746273676473646"
+    }
+  ]
 }
