--- a/Training/appsettings.json
+++ b/Training/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CmsConnectionString": "Server=KRATOS\\HAITHAM;Database=CmsAppDb;User Id=sa;Password=haitham;"
+    "CmsConnectionString": "Server=KRATOS\\HAITHAM;Database=CmsAppDb;User Id=sa;Password=haitham; Encrypt=False;"
   },
   "AppClients": [
     {
