--- a/Training/Training.csproj
+++ b/Training/Training.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
 		<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.22" />
 	</ItemGroup>
 
 	<ItemGroup>
